--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li>
-            <a href="https://beacons.page/luidev" target="_blank">
+            <a href="https://beacons.ai/luideveloper" target="_blank">
               <i class="tim-icons icon-pencil"></i>
               <p>DESENVOLVEDOR</p>
             </a>
