--- a/consultas.html
+++ b/consultas.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <title>
-    InforCovid19 - Consultas
-  </title>
-  <!--     Fonts and icons     -->
+  <title>InforCovid19 - Consultas</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <!-- Nucleo Icons -->
-  <link href="assets/css/nucleo-icons.css" rel="stylesheet" />
-  <!-- CSS Files -->
   <link href="assets/css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="assets/demo/demo.css" rel="stylesheet" />
 </head>
-
 <body class="" onload="covidBrasil(), covidTodosEstados(), covidChina()">
   <div class="wrapper">
     <div class="sidebar">
@@ -27,19 +15,19 @@
           <li class="active ">
             <a href="index.html">
               <i class="tim-icons icon-atom"></i>
-              <p>DADOS - COVID19</p>
+              <p style="font-size: 13px;">DADOS - COVID19</p>
             </a>
           </li>
           <li>
             <a href="consultas.html">
               <i class="tim-icons icon-zoom-split"></i>
-              <p>CONSULTAR DADOS</p>
+              <p style="font-size: 13px;">CONSULTAR DADOS</p>
             </a>
           </li>
           <li>
-            <a href="https://beacons.ai/luideveloper" target="_blank">
+            <a href="https://github.com/luideveloper" target="_blank">
               <i class="tim-icons icon-pencil"></i>
-              <p>DESENVOLVEDOR</p>
+              <p style="font-size: 13px;">DESENVOLVEDOR</p>
             </a>
           </li>
         </ul>
@@ -83,10 +71,8 @@
           </div>
         </div>
       </div>
-      <!-- Inicio parte de pesquisas -->
       <div class="content">
         <div class="row">
-          <!-- Inicio pesquisa de Paises -->
           <div class="col-md-6">
             <div class="card">
               <div class="card-body">
@@ -140,9 +126,6 @@
               </div>
             </div>
           </div>
-          <!-- Fim pesquisa de Paises -->
-
-          <!-- Inicio pesquisa de Estados -->
           <div class="col-md-6">
             <div class="card">
               <div class="card-body">
@@ -196,25 +179,13 @@
               </div>
             </div>
           </div>
-          <!-- Fim pesquisa de Estados -->
         </div>
       </div>
-      <!-- Fim parte de pesquisas -->
     </div>
   </div>
-
-  <!-- Scripts Funcionamento -->
-
   <script src="assets/js/core/jquery.min.js"></script>
-  <script src="assets/js/core/popper.min.js"></script>
-  <script src="assets/js/core/bootstrap.min.js"></script>
   <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <script src="assets/js/plugins/chartjs.min.js"></script>
-  <script src="assets/js/plugins/bootstrap-notify.js"></script>
   <script src="assets/js/black-dashboard.min.js?v=1.0.0"></script>
-  <script src="assets/demo/demo.js"></script>
-  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
   <script src="assets/js/pages/covid.js"></script>
-
 </body>
 </html>
